[gd_scene load_steps=3 format=3 uid="uid://c17n3eojwus82"]

[ext_resource type="Script" path="res://scripts/ui/character_stats_panel.gd" id="1_6rjm7"]
[ext_resource type="Theme" uid="uid://msaa3fsw3185" path="res://themes/stat_overlay_theme.tres" id="1_vwu3j"]

[node name="CharacterStatsPanel" type="Panel"]
clip_contents = true
custom_minimum_size = Vector2(150, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -919.0
offset_bottom = -467.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vwu3j")
script = ExtResource("1_6rjm7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 56.0
offset_top = -69.5
offset_right = -18.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsGrid" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 4

[node name="Level" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
text = "Lvl:"

[node name="LevelValue" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2

[node name="HP" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
text = "HP:"

[node name="HPValue" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2

[node name="Strength" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
text = "Str:"

[node name="StrengthValue" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2

[node name="Defense" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
text = "Def:"

[node name="DefenseValue" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2

[node name="Speed" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
text = "Spe:"

[node name="SpeedValue" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2

[node name="Movement" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
text = "Move:"

[node name="MovementValue" type="Label" parent="MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
